<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:id="@+id/main"
    android:background="@drawable/adminlogin">



    <TextView
        android:id="@+id/teTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotwarn"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="32dp"/>


    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_username"
        android:inputType="textEmailAddress"
        android:drawableStart="@android:drawable/ic_menu_edit"
        android:padding="12dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="16dp"/>


    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:padding="12dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="24dp"/>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:backgroundTint="#2196F3"
        android:textColor="@android:color/white"
        android:padding="12dp"
        android:layout_marginBottom="16dp"/>


    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/don_t_have_an_account_register"
        android:textColor="@android:color/holo_blue_dark"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/forgot_password"
        android:textColor="@android:color/holo_red_dark"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="8dp" />


</LinearLayout>